Add flyway and refactoring